--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "@heroicons/react": "^2.2.0",
     "@react-google-maps/api": "^2.20.5",
+    "axios": "^1.7.9",
     "lucide-react": "^0.469.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.2",
+    "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^7.1.1",
+    "react-toastify": "^11.0.2",
     "react-typed": "^2.0.12"
   },
   "devDependencies": {
